# overture-airflow-provider

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: e2e.yml  issue-labeler.yml  lint.yml  publish-pypi.yml  test.yml
examples/: example_dag.py
src/overture_airflow_provider/: __init__.py  _airflow_compat.py  _databricks.py  _failures.py  _glue.py  _operator.py  _report_issue.py  _setup.py  _wherobots.py  cluster_sizing.py  config.py  hooks.py  links.py  provider_info.py  python_package_utils.py  render.py  runner_assets.py  setup_info.py  spark.py  spark_agnostic_helpers.py  spark_agnostic_taskgroup.py  spark_execution_logic.py  spark_platform_handlers.py
src/overture_airflow_provider/runners/: __init__.py  job_runner_databricks.py  job_runner_glue.py  job_runner_wherobots.py
tests/: conftest.py  test_cluster_sizing.py  test_coerce_config_dict.py  test_config_validation.py  test_databricks_gpu.py  test_describe_failure.py  test_failures.py  test_hooks.py  test_iceberg_config_templating.py  test_links.py  test_platform_handlers.py  test_python_package_utils.py  test_render.py  test_report_issue.py  test_runners.py  test_select_iceberg_conf.py  test_setup_info.py  test_setup_spark_job.py  test_spark.py  test_spark_agnostic_helpers.py  test_spark_agnostic_operator.py  test_version.py
tests/e2e/: Dockerfile  README.md  conftest.py  docker-compose.yaml  run-e2e.sh  run.ps1  run.sh  test_dag_e2e.py
