[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[project]
name = "overture-airflow-provider"
version = "0.1.3"
description = "Spark-agnostic Airflow task group for running jobs on AWS Glue, Databricks, or Wherobots from a single DAG entry point."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Overture Maps Foundation" }]
keywords = ["airflow", "spark", "glue", "databricks", "wherobots", "sedona", "iceberg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "apache-airflow>=2.11.0",
    "apache-airflow-providers-amazon",
    "boto3",
    "requests",
    "packaging",
    "sh",
]

[project.optional-dependencies]
databricks = ["apache-airflow-providers-databricks", "databricks-sdk"]
wherobots = ["airflow-providers-wherobots"]
all = [
    "apache-airflow-providers-databricks",
    "databricks-sdk",
    "airflow-providers-wherobots",
]

[project.urls]
Homepage = "https://github.com/OvertureMaps/overture-airflow-provider"
Repository = "https://github.com/OvertureMaps/overture-airflow-provider"
Documentation = "https://github.com/OvertureMaps/overture-airflow-provider#readme"
Issues = "https://github.com/OvertureMaps/overture-airflow-provider/issues"

[project.entry-points."apache_airflow_provider"]
overture-airflow-provider = "overture_airflow_provider.provider_info:get_provider_info"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]

[tool.uv.build-backend]
module-name = "overture_airflow_provider"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# AIR* = Airflow-specific rules (deprecated patterns, anti-patterns).
# Run `uv run ruff check . --select AIR` to see Airflow findings in isolation.
select = ["E", "F", "I", "W", "UP", "B", "AIR"]
ignore = ["E501"]  # line-length enforced by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "E712", "F811"]
"**/conftest.py" = ["F401"]
# Runner scripts run on-cluster; they use platform-specific magic globals
# (awsglue, pyspark) that aren't installed locally, and module-level code
# that precedes some conditional imports.
"**/runners/**" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
]
